--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			<div class="row text-center text-md-left mt-3 pb-3">
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
 					<h6 class="title mb-4 font-bold">Credit</h6>
-					<p>Site was made with MDBootstrap and scrolling JS was made by Blackrockdigital</p>
+					<p>Site was made with Bootstrap and scrolling JS was made by Blackrockdigital</p>
 				</div>
 				<hr class="w-100 clearfix d-md-none">
 				<div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
