--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="row">
 					<div class="col-md-7 mb-4">
 						<div class="view overlay hm-white-light z-depth-1-half">
-							<img alt="" class="img-fluid" src="https://i.imgur.com/ilejHcx.jpg">
+							<img alt="" class="img-fluid" src="images/trackgroup.jpg">
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -69,7 +69,7 @@
 						<h2>4.0 GPA!!!</h2>
 						<hr>
 						<div class="view overlay hm-white-light z-depth-1-half">
-							<img alt="" class="img-fluid" src="https://i.imgur.com/2ELR46K.png">
+							<img alt="" class="img-fluid" src="images/grades.png">
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -146,7 +146,7 @@
 					<br>
 					<div class="col-lg-4 col-md-12 mb-4">
 						<div class="card">
-							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="https://i.imgur.com/RqLCk4h.png"></div>
+							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="images/cplusplus.png"></div>
 							<div class="card-body">
 								<h4 class="card-title">Field of Study</h4>
 								<p class="card-text">I intend on majoring in computer science and mastering C++ or C#. <a href="https://isocpp.org/" target="_blank">source</a></p>
@@ -155,7 +155,7 @@
 					</div>
 					<div class="col-lg-4 col-md-6 mb-4">
 						<div class="card">
-							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="https://i.imgur.com/IISfib4.jpg"></div>
+							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="images/physics.jpg"></div>
 							<div class="card-body">
 								<h4 class="card-title">Relevant Course Work</h4>
 								<p class="card-text">Courses I am currently taking that will prep me for my major are AP Comp Sci Principles and AP Physics 1. I am also learning Lua on my own free time. <a href="https://sites.google.com/site/adhsbarryscience/ap-physics-2" target="_blank">source</a></p>
@@ -164,7 +164,7 @@
 					</div>
 					<div class="col-lg-4 col-md-6 mb-4">
 						<div class="card">
-							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="https://i.imgur.com/wt6Dicv.png"></div>
+							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="images/track.png"></div>
 							<div class="card-body">
 								<h4 class="card-title">Track & Field</h4>
 								<p class="card-text">Scoring 2nd place at my first Meet!</p>
