--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.1/css/mdb.min.css" rel="stylesheet" type="text/css">
@@ -8,28 +9,27 @@
 	<link href="css/style.css" rel="stylesheet">
 	<title>My Portfolio</title>
 </head>
+
 <body class="navy-blue-skin">
 	<header id="header1">
-		<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" id="mainNav">
-			<a class="navbar-brand js-scroll-trigger" href="#about"><strong>Francis</strong></a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+		<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" id="mainNav">	<a class="navbar-brand js-scroll-trigger" href="#about"><strong>Francis</strong></a> 
+			<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#header1">Home</a>
+					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#header1">Home</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#about">About</a>
+					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#about">About</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+					</li>
+					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#scratch">Scratch</a>
 					</li>
 				</ul>
 				<ul class="navbar-nav nav-flex-icons">
-					<li class="nav-item">
-						<a class="nav-link" href="https://github.com/MMXIX-Evanescence" target="_blank"><i class="fa fa-github"></i></a>
+					<li class="nav-item">	<a class="nav-link" href="https://github.com/MMXIX-Evanescence" target="_blank"><i class="fa fa-github"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -40,7 +40,9 @@
 					<div class="col-md-10 text-center">
 						<h2 class="display-3 font-bold white-text mb-2">Welcome!</h2>
 						<hr class="hr-light">
-						<h4 class="white-text my-4">My name is Francis and I am an aspiring programmer hoping to innovate new things.</h4><button class="btn btn-outline-white waves-effect waves-light"><a class="js-scroll-trigger" href="#about">Read more</a><i class="fa fa-arrow-circle-down ml-2"></i></button>
+						<h4 class="white-text my-4">My name is Francis and I am an aspiring programmer hoping to innovate new things.</h4>
+						<button class="btn btn-outline-white waves-effect waves-light"><a class="js-scroll-trigger" href="#about">Read more</a><i class="fa fa-arrow-circle-down ml-2"></i>
+						</button>
 					</div>
 				</div>
 			</div>
@@ -61,7 +63,8 @@
 						<hr>
 						<p>I was in Track & Field for Jumps and it was one of the best experiences I ever had. My current goals in life is to go to a good university and major in computer science. One of my favorite quotes is, "If you are depressed you are living in the past. If you are anxious you are living in the future. If you are at peace you are living in the present." - Lao Tzu. My favorite thing about school is meeting new people and being able to have a good education and setting myself up for a successful and happy life.</p>
 					</div>
-				</div><br>
+				</div>
+				<br>
 				<br>
 				<br>
 				<div class="row">
@@ -110,7 +113,8 @@
 							</tbody>
 						</table>
 					</div>
-				</div><br>
+				</div>
+				<br>
 				<br>
 				<br>
 				<div class="row">
@@ -141,30 +145,39 @@
 				<div class="row">
 					<div class="col-md-12 mb-4">
 						<h1 id="resume">Resume</h1>
-					</div><br>
+					</div>
+					<br>
 					<br>
 					<br>
 					<div class="col-lg-4 col-md-12 mb-4">
 						<div class="card">
-							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="images/cplusplus.png"></div>
+							<div class="view overlay hm-white-slight">
+								<img alt="" class="img-fluid" src="images/cplusplus.png">
+							</div>
 							<div class="card-body">
 								<h4 class="card-title">Field of Study</h4>
-								<p class="card-text">I intend on majoring in computer science and mastering C++ or C#. <a href="https://isocpp.org/" target="_blank">source</a></p>
+								<p class="card-text">I intend on majoring in computer science and mastering C++ or C#. <a href="https://isocpp.org/" target="_blank">source</a>
+								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 mb-4">
 						<div class="card">
-							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="images/physics.jpg"></div>
+							<div class="view overlay hm-white-slight">
+								<img alt="" class="img-fluid" src="images/physics.jpg">
+							</div>
 							<div class="card-body">
 								<h4 class="card-title">Relevant Course Work</h4>
-								<p class="card-text">Courses I am currently taking that will prep me for my major are AP Comp Sci Principles and AP Physics 1. I am also learning Lua on my own free time. <a href="https://sites.google.com/site/adhsbarryscience/ap-physics-2" target="_blank">source</a></p>
+								<p class="card-text">Courses I am currently taking that will prep me for my major are AP Comp Sci Principles and AP Physics 1. I am also learning Lua on my own free time. <a href="https://sites.google.com/site/adhsbarryscience/ap-physics-2" target="_blank">source</a>
+								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 mb-4">
 						<div class="card">
-							<div class="view overlay hm-white-slight"><img alt="" class="img-fluid" src="images/track.png"></div>
+							<div class="view overlay hm-white-slight">
+								<img alt="" class="img-fluid" src="images/track.png">
+							</div>
 							<div class="card-body">
 								<h4 class="card-title">Track & Field</h4>
 								<p class="card-text">Scoring 2nd place at my first Meet!</p>
@@ -175,28 +188,35 @@
 				<hr>
 				<div class="row">
 					<div class="col-md-12 mb-4">
-						<h1 class="center" id="portfolio">Portfolio</h1>
-					</div><br>
+						<h1 id="portfolio">Portfolio</h1>
+					</div>
+					<br>
 					<br>
 					<br>
 					<div class="col-md-12 mb-4">
 						<ul class="list-group">
 							<li class="list-group-item">
-								<a href="https://docs.google.com/a/ggusd.net/document/d/1M5h_9MlT6hnmOARgbIL0_3bBQ79srO19EBL2iUvxYFQ/edit?usp=sharing" target="_blank">Internet Notes Part 1</a>
-							</li>
-							<li class="list-group-item">
-								<a href="https://docs.google.com/a/ggusd.net/document/d/1g_hb-4-_r3ng2HY4lYRq1XYCHXXsEqaKMlCXPNnwjRU/edit?usp=sharing" target="_blank">Impact of the Internet</a>
-							</li>
-							<li class="list-group-item">
-								<a href="https://docs.google.com/a/ggusd.net/document/d/1xafDhRWxEpBcmydwSDBHHRVU6zVOwBiC3hjjVv1O054/edit?usp=sharing" target="_blank">Internet Notes Part 3</a>
-							</li>
-							<li class="list-group-item">
-								<a href="https://docs.google.com/a/ggusd.net/document/d/1W2xlaWXaMpBcMMwa-MOUb6jJNC-lT8FMM72r-8hPc9A/edit?usp=sharing" target="_blank">Internet Notes Part 4</a>
+								<h4 class="center"><i class="fa fa-hdd-o text-center"></i><a href="https://drive.google.com/drive/folders/0BzaKNREbkfJlVldoZTFPRHJOdmM?usp=sharing" target="_blank"> Folder</a></h4>
 							</li>
 						</ul>
 					</div>
 				</div>
-			</div>
+				<hr>
+				<div id="scratch" class="container">
+					<div class="row">
+						<div class="col-md-6 mb-4">
+							<h2>Scratch: Dankemon</h2>
+							<hr>
+							<p>Dankemon is my first ever game that I made in Scratch. It is a pokemon game parody filled with today’s dank memes just for the laughs. Some programming concepts I applied when making this game was algorithmic thinking. I faced numerous problems when making this game such as making a battle system. I thought to myself, “what did I put myself into”. Essentially, I realized when I was coding Dankemon is that I am basically giving a computer a set of instructions to follow. The computer executes those instructions by chronological order. Using that concept, I was able to replicate Pokemon’s battle system. Aspects of my game that I like best is how much it was able to make people laugh. As I was watching people play my game, they couldn’t help but enjoy the dank memes and laugh. If I had more time to work on my game, I would improve the efficiency of my code, add an inventory system, a boss battle or gym battle, and a leveling and stats system.</p>
+						</div>
+						<div class="col-md-6 mb-4">
+							<div>
+								<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/184762183/?autostart=false" frameborder="0" allowfullscreen></iframe>
+								<div class="mask"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 		</section>
 	</main>
 	<footer class="page-footer stylish-color-dark">
@@ -209,25 +229,28 @@
 				<hr class="w-100 clearfix d-md-none">
 				<div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
 					<h6 class="title mb-4 font-bold">Image Credit</h6>
-					<p><a href="#!">Landing page image was made by Zeruch</a></p>
+					<p><a href="#!">Landing page image was made by Zeruch</a>
+					</p>
 				</div>
 				<hr class="w-100 clearfix d-md-none">
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
 					<h6 class="title mb-4 font-bold">Contact</h6>
-					<p><i class="fa fa-github"></i><a href="https://github.com/MMXIX-Evanescence" target="_blank"> Github</a></p>
+					<p><i class="fa fa-github"></i><a href="https://github.com/MMXIX-Evanescence" target="_blank"> Github</a>
+					</p>
 					<p><i class="fa fa-envelope"></i> 19ftran@gmail.com</p>
 				</div>
 			</div>
 		</div>
 	</footer>
 	<script src="js/bootstrap.js" type="text/javascript">
-	</script> 
+	</script>
 	<script>
-	              wow = new WOW().init();
-	</script> 
+		wow = new WOW().init();
+	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.1/js/mdb.min.js" type="text/javascript">
-	</script> 
+	</script>
 	<script src="js/scrolling.js" type="text/javascript">
 	</script>
 </body>
+
 </html>
