--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.css" rel="stylesheet">
 	<title>My Portfolio</title>
 </head>
 
@@ -26,6 +27,9 @@
 					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
 					</li>
 					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#scratch">Scratch</a>
+					</li>
+					</li>
+					<li class="nav-item">	<a class="nav-link js-scroll-trigger" href="#python">Python</a>
 					</li>
 				</ul>
 				<ul class="navbar-nav nav-flex-icons">
@@ -198,6 +202,9 @@
 							<li class="list-group-item">
 								<h4 class="center"><i class="fa fa-hdd-o text-center"></i><a href="https://drive.google.com/drive/folders/0BzaKNREbkfJlVldoZTFPRHJOdmM?usp=sharing" target="_blank"> Folder</a></h4>
 							</li>
+							<li class="list-group-item">
+								<h4 class="center"><i class="fa fa-sticky-note text-center"></i><a href="https://repl.it/@FrancisTran/IntroPython" target="_blank"> Python Notes</a></h4>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -205,7 +212,7 @@
 				<div id="scratch" class="container">
 					<div class="row">
 						<div class="col-md-6 mb-4">
-							<h2>Scratch: Dankemon</h2>
+							<h2><i class="fa fa-gamepad text-center"></i> Scratch: Dankemon</h2>
 							<hr>
 							<p>Dankemon is my first ever game that I made in Scratch. It is a pokemon game parody filled with today’s dank memes just for the laughs. Some programming concepts I applied when making this game was algorithmic thinking. I faced numerous problems when making this game such as making a battle system. I thought to myself, “what did I put myself into”. Essentially, I realized when I was coding Dankemon is that I am basically giving a computer a set of instructions to follow. The computer executes those instructions by chronological order. Using that concept, I was able to replicate Pokemon’s battle system. Aspects of my game that I like best is how much it was able to make people laugh. As I was watching people play my game, they couldn’t help but enjoy the dank memes and laugh. If I had more time to work on my game, I would improve the efficiency of my code, add an inventory system, a boss battle or gym battle, and a leveling and stats system.</p>
 						</div>
@@ -214,6 +221,22 @@
 								<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/184762183/?autostart=false" frameborder="0" allowfullscreen></iframe>
 								<div class="mask"></div>
 							</div>
+						</div>
+					</div>
+				</div>
+				<hr>
+				<div id="python" class="container">
+					<div class="row">
+						<div class="col-md-6 mb-4">
+							<div>
+								<iframe height="400px" width="100%" src="https://repl.it/@FrancisTran/interactivefiction?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+								<div class="mask"></div>
+							</div>
+						</div>
+						<div class="col-md-6 mb-4">
+							<h2><i class="icon-python"></i>Python: Upheaval (Interactive Fiction)</h2>
+							<hr>
+							<p>Upheaval is a tragedy about a girl named Penelope and her loving family. It all seemed well at first... until it all changed after that day. Some programming concepts I learned and applied to this story were if statements. The if statements played an important role of managing which scene to proceed to, depending on the choice that was selected. Another concept I applied to this story was functions. Instead of coding a story into a big pile of mess, I was able to organize each scene into its own function. Thinking back to the stories that I read, the one that stood out to me most was Chelsea's. The story was interesting because it had a good plot and many choices.</p>
 						</div>
 					</div>
 				</div>
